@@ -324,9 +324,8 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
   { L_SHOW,           TOKEN( Y_SHOW                       ) },
   { L_STRUCTURE,      C_SY1( false, L_STRUCT              ) },
   { L_THREAD_LOCAL,   C_SYN( true,
-                        { { LANG_C_CPP_MAX(99,03), L_GNU___THREAD  },
-                          { LANG_C_MIN(11),        L__THREAD_LOCAL },
-                          { LANG_ALL,              L_THREAD_LOCAL  } } ) },
+                        { { LANG_C_MIN(11), L__THREAD_LOCAL },
+                          { LANG_ALL,       L_THREAD_LOCAL  } } ) },
   { H_THREAD_LOCAL,   C_SYN( true,
                         { { LANG_C_CPP_MAX(99,03), L_GNU___THREAD  },
                           { LANG_C_MIN(11),        L__THREAD_LOCAL },
