@@ -1,0 +1,1 @@
+cdecl @ @ @ explain thread_local int x @ 0
